<resources>
    <string name="app_name"><Young>Boom</Young></string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="click_me">Click Me</string>
    <string name="android_base_2025">Android Base 2025</string>
    <string name="todo">TODO</string>
    <string name="dummy_splash_text"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry. ]]></string>
    <string name="get_started">Get Started</string>
    <string name="register_now">Register Now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_you_details_below_to_login">Enter you details below to login</string>
    <string name="email_or_user_name">Email or user name</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account_yet">You don’t have an account yet?</string>
    <string name="two_factor_authentication"> Setup Two-factor \nAuthentication</string>
    <string name="please_enter_the_authentication_code">Please enter the authentication code</string>
    <string name="get_authentication_code_by_authenticator_app">Get authentication code by authenticator\napp</string>
    <string name="cancel">Cancel</string>
    <string name="log_in_new">Log In</string>
    <string name="forgot_password_">Forgot password</string>
    <string name="don_t_worry_we_got_you">Don’t worry we got you</string>
    <string name="enter_email">Enter email</string>
    <string name="verify_its_you">Verify its you</string>
    <string name="we_have_send_verification_code_to_your_email_address">We have send verification code to\nyour email address</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="verify">Verify</string>
    <string name="setup_your_new_password">Setup your new password</string>
    <string name="create_your_password_of_12_characters">Create your password of 12 characters</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm">Confirm</string>
    <string name="password_changed_successfully">Password Changed\nSuccessfully</string>
    <string name="now_you_can_login_through_new_password">Now you can login through\nnew password</string>
    <string name="done">Done</string>
    <string name="welcome_lets_create_your_account">Welcome lets create\nyour account</string>
    <string name="follow_some_easy_steps_to_create_account">Follow some easy steps to create account</string>
    <string name="next">Next</string>
    <string name="already_have_an_account_yet">Already have an account yet?</string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="enter_some_basic_details_below">Enter some basic details below</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company">Company</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="setup_your_password">Setup your password</string>
    <string name="add_license">Add License</string>
    <string name="you_can_add_license_for_user_verification">You can add License for user verification.</string>
    <string name="upload">Upload</string>
    <string name="add_profile_pic">Add profile pic</string>
    <string name="add_photo_or_click_now">Add photo or click now</string>
    <string name="take_picture_now">Take Picture now</string>
    <string name="add_additional_photos">Add additional photos</string>
    <string name="you_can_add_max_5_pics">You can add max 5 pics</string>
    <string name="add_more">add more</string>
    <string name="crd_number_verification">CRD number verification</string>
    <string name="enter_you_crd_number_for_verification">Enter you CRD number for verification</string>
    <string name="crd_number">CRD number</string>
    <string name="add_your_personal_info">Add your personal info</string>
    <string name="select_all_the_input_below">Select all the input below</string>
    <string name="your_age">Your Age</string>
    <string name="gender">Gender</string>
    <string name="your_gender">Your gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="children">Children</string>
    <string name="how_may_children_you_have">How may children you have</string>
    <string name="home_ownership">Home Ownership</string>
    <string name="your_home_ownership">Your home ownership</string>
    <string name="products_services_offered">Products/ Services Offered</string>
    <string name="areas_of_expertise">Areas of Expertise</string>
    <string name="select_areas_of_expertise">Select areas of expertise</string>
    <string name="industry">Industry</string>
    <string name="interested_in">Interested In</string>
    <string name="industry_interested_in">Industry Interested In</string>
    <string name="select_your_interest">Select your interest</string>
    <string name="objective">Objective</string>
    <string name="financial_experience">Financial Experience</string>
    <string name="investments">Investments</string>
    <string name="services_interested">Services Interested</string>
    <string name="select_your_services_interested">Select your services interested</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="check_terms_and_conditions_to_continue">Check Terms and Conditions to continue</string>
    <string name="add_payment">Add payment</string>
    <string name="you_can_add_payment_now_or_skip_for_now">You can add payment now or skip for now</string>
    <string name="billing_address">Billing address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip code</string>
    <string name="card_number">Card number</string>
    <string name="card_expiration_date">Card expiration date</string>
    <string name="cvv">CVV</string>
    <string name="add">Add</string>
    <string name="skip">Skip</string>
    <string name="account_created_successfully">Account Created\nSuccessfully</string>
    <string name="dis_created_successfully">Account Created, Welcome, You\'re All\nSet, Account Ready, and Success.</string>
    <string name="set_up_two_factor_authentication">Set Up Two-factor\nAuthentication</string>
    <string name="add_an_extra_layer_of_protection_to_your_account">Add an extra layer of protection to your\naccount.</string>
    <string name="scan_this_qr_code_with_your_authenticator_app">Scan this QR code with your Authenticator App</string>
    <string name="enter_code_manually">Enter code manually</string>
    <string name="continue_qr">Continue</string>
    <string name="info_policies">Info &amp; Policies</string>
    <string name="about">About</string>
    <string name="policies_and_agreement">Policies and Agreement</string>
    <string name="media">Media</string>
    <string name="advertise">Advertise</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="trending_topic">Trending Topic...</string>
    <string name="news">News...</string>
    <string name="members">Members...</string>
    <string name="small_business">Small Business...</string>
    <string name="view_more">View more</string>
    <string name="your_profile">Your Profile</string>
    <string name="ads">Ads</string>
    <string name="account">Account</string>
    <string name="exchange">Exchange</string>
    <string name="member_agreement">Member Agreement</string>
    <string name="account_verification">Account Verification</string>
    <string name="account_verify_txt">To ensure a secure and trusted community, please verify your account by uploading a valid government-issued ID or linking a verified phone number. Verification helps build credibility and unlocks additional platform features.</string>
    <string name="member_agree_txt">By checking this box, I agree to the Terms of Service and Privacy Policy of this platform. I understand that my data may be used for personalized content and advertisements. I also acknowledge that any violations of the community guidelines may result in account suspension or termination.</string>
    <string name="accept">Accept</string>
    <string name="additional_information">Additional Information</string>
    <string name="change_password">Change Password</string>
    <string name="about_1">About*</string>
    <string name="your_photos">Your Photos</string>
    <string name="save_changes">Save Changes</string>
    <string name="investment_summary">Investment Summary</string>
    <string name="stock_investments">Stock Investments</string>
    <string name="ic_dollar_currency">$</string>
    <string name="specify_stock_symbols">Specify Stock Symbols</string>
    <string name="specify_crypto_symbols">Specify Crypto Symbols</string>
    <string name="other_security_investments">Other Security Investments</string>
    <string name="real_estate">Real Estate</string>
    <string name="crypto_investments">Crypto Investments</string>
    <string name="retirement_account">Retirement Account</string>
    <string name="savings">Savings</string>
    <string name="startups">Startups</string>
    <string name="family_education"><![CDATA[Family & Education]]></string>
    <string name="education_level">Education Level</string>
    <string name="about_young_app">About Boom</string>
    <string name="whether_you_re">Whether you\'re:</string>
    <string name="empowering_the_builders_of_tomorrow">Empowering the Builders of Tomorrow</string>
    <string name="young_app_is_a_purpose_built_platform_that_brings_together_early_stage_startups_visionary_advisors_and_ambitious_members_to_co_create_network_and_grow_with_features_like_feeds_vaults_shares_and_streams_we_offer_a_holistic_ecosystem_for_collaboration_feedback_learning_and_pitch_development">Boom is a purpose-built platform that brings together early-stage startups, visionary advisors, and ambitious members to co-create, network, and grow. With features like Feeds, Vaults, Shares, and Streams, we offer a holistic ecosystem for collaboration, feedback, learning, and pitch development.</string>
    <string name="building_a_startup_n_offering_expert_mentorship_n_exploring_opportunities_to_invest_or_collaborate">-Building a startup\n-Offering expert mentorship\n-Exploring opportunities to invest or collaborate</string>
    <string name="young_app_is_your_launchpad_for_authentic_innovation">Boom is your launchpad for authentic innovation.</string>
    <string name="core_features">Core Features:</string>
    <string name="our_mission">Our Mission:</string>
    <string name="share_ideas_amp_get_real_time_feedback_n_vault_your_sensitive_documents_n_stream_updates_and_pitch_sessions_n_connect_via_in_app_chat_and_posts"><![CDATA[🧠 Share ideas & get real-time feedback\n🔐 Vault your sensitive documents\n📢 Stream updates and pitch sessions\n💬 Connect via in-app chat and posts]]></string>
    <string name="to_make_startup_growth_more_transparent_community_driven_and_inclusive_for_the_next_generation_of_changemakers">To make startup growth more transparent, community-driven, and inclusive for the next generation of changemakers.</string>
</resources>