<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.tech.young.ui.policies_about.AboutPolicesVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_20sdp"
        tools:context=".ui.policies_about.AboutFragment">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_600_SemiBold"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/about_young_app"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_600_SemiBold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/empowering_the_builders_of_tomorrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_400_Regular"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/young_app_is_a_purpose_built_platform_that_brings_together_early_stage_startups_visionary_advisors_and_ambitious_members_to_co_create_network_and_grow_with_features_like_feeds_vaults_shares_and_streams_we_offer_a_holistic_ecosystem_for_collaboration_feedback_learning_and_pitch_development"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_600_SemiBold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/whether_you_re"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc1"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_400_Regular"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/building_a_startup_n_offering_expert_mentorship_n_exploring_opportunities_to_invest_or_collaborate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading2"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_600_SemiBold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/young_app_is_your_launchpad_for_authentic_innovation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc2"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_600_SemiBold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/core_features"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading3"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_400_Regular"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/share_ideas_amp_get_real_time_feedback_n_vault_your_sensitive_documents_n_stream_updates_and_pitch_sessions_n_connect_via_in_app_chat_and_posts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading4"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_600_SemiBold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/our_mission"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc3"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_500_Medium"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/to_make_startup_growth_more_transparent_community_driven_and_inclusive_for_the_next_generation_of_changemakers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading5"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView_600_SemiBold"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/ads"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMission"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            tools:itemCount="5"
            tools:listitem="@layout/ads_item_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvAds"
            app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>